2014-12-20  Titus Brown  <titus@idyll.org>

    * sandbox/slice-reads-by-coverage.py: fixed 'N' behavior to match other
    scripts ('N's are now replaced by 'A', not 'G').
    * sandbox/trim-low-abund.py: corrected reporting bug (bp written);
    simplified second-pass logic a bit; expanded reporting.

2014-12-17  Jessica Mizzi  <mizzijes@msu.edu>

    * khmer/file.py,sandbox/sweep-reads.py,scripts/{abundance-dist-single,
    abundance-dist,annotate-partitions,count-median,count-overlap,do-partition,
    extract-paired-reads,extract-partitions,filter-abund-single,filter-abund,
    filter-stoptags,interleave-reads,load-graph,load-into-counting,
    make-initial-stoptags,merge-partitions,normalize-by-median,partition-graph,
    sample-reads-randomly,split-paired-reads}.py,setup.cfg,
    tests/{test_script_arguments,test_scripts}.py: Added force option to all 
    scripts to script IO sanity checks and updated tests to match. 

2014-12-17  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.cfg,tests/test_{counting_hash,counting_single,filter,graph,
    hashbits,hashbits_obj,labelhash,lump,read_parsers,scripts,subset_graph}.py:
    reduce memory usage of tests to about 100 megabytes max.

2014-12-17  Michael R. Crusoe  <mcrusoe@msu.edu>

    * scripts/load-graph.py,khmer/_khmermodule.cc: restore threading to
    load-graph.py

2014-12-16  Titus Brown  <titus@idyll.org>

    * sandbox/{calc-error-profile.py,collect-variants.py,correct-errors.py,
    trim-low-abund.py}: Support for k-mer spectral error analysis, sublinear
    error profile calculations from shotgun data sets, adaptive variant
    collection based on graphalign, streaming error correction, and streaming
    error trimming.
    * tests/test_sandbox_scripts.py: added tests for sandbox/trim-low-abund.py.
    * tests/test_counting_hash.py: added tests for new
    CountingHash::find_spectral_error_positions function.

2014-12-16  Michael R. Crusoe  <mcrusoe@msu.edu>  &  Camille Scott